{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 87,
  "lineage": "2a005848-47e1-e146-eeb3-475e0144b71c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:895097617590:instance/i-06864bd7e814eec10",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06864bd7e814eec10",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b40ea567c252fffe",
            "private_dns": "ip-10-150-1-58.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.150.1.58",
            "public_dns": "ec2-54-224-48-186.compute-1.amazonaws.com",
            "public_ip": "54.224.48.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-062b771aa6cf24ac2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04e6f6381e366f855"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b63dc099426bd122",
            "tags": {
              "Name": "Ansible"
            },
            "tags_all": {
              "Name": "Ansible"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e6f6381e366f855"
            ]
          }
        }
      ]
    },
    {
      "module": "module.Multiple_EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2",
      "provider": "module.Multiple_EC2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:895097617590:instance/i-0c814a5b2276feac4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c814a5b2276feac4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fde97a6a1d8208e5",
            "private_dns": "ip-10-150-1-248.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.150.1.248",
            "public_dns": "ec2-52-91-159-81.compute-1.amazonaws.com",
            "public_ip": "52.91.159.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0277b52d5be5ff514",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04e6f6381e366f855"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b63dc099426bd122",
            "tags": {
              "Name": "DockerProjectCPE-VM1"
            },
            "tags_all": {
              "Name": "DockerProjectCPE-VM1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e6f6381e366f855"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:895097617590:instance/i-0ba467002c47d9426",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba467002c47d9426",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05fee396503cfb6ca",
            "private_dns": "ip-10-150-1-41.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.150.1.41",
            "public_dns": "ec2-54-161-23-231.compute-1.amazonaws.com",
            "public_ip": "54.161.23.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-077aab39ccc417d1f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04e6f6381e366f855"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b63dc099426bd122",
            "tags": {
              "Name": "DockerProjectCPE-VM2"
            },
            "tags_all": {
              "Name": "DockerProjectCPE-VM2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e6f6381e366f855"
            ]
          }
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:895097617590:instance/i-0c84a61fd46bf2bb9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c84a61fd46bf2bb9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ffa280e495c583c5",
            "private_dns": "ip-10-150-1-120.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.150.1.120",
            "public_dns": "ec2-34-204-42-210.compute-1.amazonaws.com",
            "public_ip": "34.204.42.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-012f9d22c0088e8f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04e6f6381e366f855"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b63dc099426bd122",
            "tags": {
              "Name": "DockerProjectCPE-VM3"
            },
            "tags_all": {
              "Name": "DockerProjectCPE-VM3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e6f6381e366f855"
            ]
          }
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fcb700a6792d360",
            "association_id": "eipassoc-046fc4512a6178eb6",
            "domain": "vpc",
            "id": "eipalloc-09fcb700a6792d360",
            "network_border_group": "us-east-1",
            "network_interface": "eni-052a69de54a03ea13",
            "private_dns": "ip-10-150-1-99.ec2.internal",
            "private_ip": "10.150.1.99",
            "public_dns": "ec2-52-2-183-97.compute-1.amazonaws.com",
            "public_ip": "52.2.183.97",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.Networking.aws_internet_gateway.ig",
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:895097617590:internet-gateway/igw-07db38d52de36a90c",
            "id": "igw-07db38d52de36a90c",
            "owner_id": "895097617590",
            "tags": {
              "Environment": "DockerProject-CPE",
              "Name": "DockerProject-CPE-igw"
            },
            "tags_all": {
              "Environment": "DockerProject-CPE",
              "Name": "DockerProject-CPE-igw"
            },
            "vpc_id": "vpc-0f041e8f458ff3733"
          },
          "dependencies": [
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fcb700a6792d360",
            "connectivity_type": "public",
            "id": "nat-0103f09bd2eaadee8",
            "network_interface_id": "eni-052a69de54a03ea13",
            "private_ip": "10.150.1.99",
            "public_ip": "52.2.183.97",
            "subnet_id": "subnet-0b63dc099426bd122",
            "tags": {
              "Environment": "DockerProject-CPE",
              "Name": "nat"
            },
            "tags_all": {
              "Environment": "DockerProject-CPE",
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.Networking.aws_eip.nat_eip",
            "module.Networking.aws_internet_gateway.ig",
            "module.Networking.aws_subnet.public_subnet",
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-090baab44b92752e71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0103f09bd2eaadee8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-090baab44b92752e7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_eip.nat_eip",
            "module.Networking.aws_internet_gateway.ig",
            "module.Networking.aws_nat_gateway.nat",
            "module.Networking.aws_route_table.private",
            "module.Networking.aws_subnet.public_subnet",
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07db38d52de36a90c",
            "id": "r-rtb-0f585c1688db720441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f585c1688db72044",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_internet_gateway.ig",
            "module.Networking.aws_route_table.public",
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:895097617590:route-table/rtb-090baab44b92752e7",
            "id": "rtb-090baab44b92752e7",
            "owner_id": "895097617590",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0103f09bd2eaadee8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "DockerProject-CPE",
              "Name": "DockerProject-CPE-private-route-table"
            },
            "tags_all": {
              "Environment": "DockerProject-CPE",
              "Name": "DockerProject-CPE-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f041e8f458ff3733"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:895097617590:route-table/rtb-0f585c1688db72044",
            "id": "rtb-0f585c1688db72044",
            "owner_id": "895097617590",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07db38d52de36a90c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "DockerProject-CPE",
              "Name": "DockerProject-CPE-public-route-table"
            },
            "tags_all": {
              "Environment": "DockerProject-CPE",
              "Name": "DockerProject-CPE-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f041e8f458ff3733"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d0a171bc9b81af3",
            "route_table_id": "rtb-090baab44b92752e7",
            "subnet_id": "subnet-0ba577f03c7611dbc"
          },
          "dependencies": [
            "module.Networking.aws_route_table.private",
            "module.Networking.aws_subnet.private_subnet",
            "module.Networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2fdf3fbae737fd8",
            "route_table_id": "rtb-090baab44b92752e7",
            "subnet_id": "subnet-0749b4aaff10d93d8"
          },
          "dependencies": [
            "module.Networking.aws_route_table.private",
            "module.Networking.aws_subnet.private_subnet",
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c241d24ff0bcd4a1",
            "route_table_id": "rtb-0f585c1688db72044",
            "subnet_id": "subnet-0b63dc099426bd122"
          },
          "dependencies": [
            "module.Networking.aws_route_table.public",
            "module.Networking.aws_subnet.public_subnet",
            "module.Networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5c057e8efe760ce",
            "route_table_id": "rtb-0f585c1688db72044",
            "subnet_id": "subnet-0edf3471ccdca34ce"
          },
          "dependencies": [
            "module.Networking.aws_route_table.public",
            "module.Networking.aws_subnet.public_subnet",
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:895097617590:security-group/sg-04e6f6381e366f855",
            "description": "Default SG to alllow traffic from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-04e6f6381e366f855",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "DockerProject-CPE-default-sg",
            "name_prefix": "",
            "owner_id": "895097617590",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Antoine Sterna",
              "Environment": "DockerProject-CPE"
            },
            "tags_all": {
              "Author": "Antoine Sterna",
              "Environment": "DockerProject-CPE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f041e8f458ff3733"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:895097617590:subnet/subnet-0ba577f03c7611dbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.150.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba577f03c7611dbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "895097617590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DockerProject-CPE",
              "Name": "DockerProject-CPE-us-east-1a-private-subnet"
            },
            "tags_all": {
              "Environment": "DockerProject-CPE",
              "Name": "DockerProject-CPE-us-east-1a-private-subnet"
            },
            "vpc_id": "vpc-0f041e8f458ff3733"
          },
          "dependencies": [
            "module.Networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:895097617590:subnet/subnet-0749b4aaff10d93d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.150.200.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0749b4aaff10d93d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "895097617590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DockerProject-CPE",
              "Name": "DockerProject-CPE-us-east-1b-private-subnet"
            },
            "tags_all": {
              "Environment": "DockerProject-CPE",
              "Name": "DockerProject-CPE-us-east-1b-private-subnet"
            },
            "vpc_id": "vpc-0f041e8f458ff3733"
          },
          "dependencies": [
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:895097617590:subnet/subnet-0b63dc099426bd122",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.150.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b63dc099426bd122",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "895097617590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DockerProject-CPE",
              "Name": "DockerProject-CPE-us-east-1a-public-subnet"
            },
            "tags_all": {
              "Environment": "DockerProject-CPE",
              "Name": "DockerProject-CPE-us-east-1a-public-subnet"
            },
            "vpc_id": "vpc-0f041e8f458ff3733"
          },
          "dependencies": [
            "module.Networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:895097617590:subnet/subnet-0edf3471ccdca34ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.150.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edf3471ccdca34ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "895097617590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DockerProject-CPE",
              "Name": "DockerProject-CPE-us-east-1b-public-subnet"
            },
            "tags_all": {
              "Environment": "DockerProject-CPE",
              "Name": "DockerProject-CPE-us-east-1b-public-subnet"
            },
            "vpc_id": "vpc-0f041e8f458ff3733"
          },
          "dependencies": [
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:895097617590:vpc/vpc-0f041e8f458ff3733",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.150.0.0/16",
            "default_network_acl_id": "acl-0b1c245865d52139d",
            "default_route_table_id": "rtb-09e9579ce4eb9ab20",
            "default_security_group_id": "sg-08938f7ca52168940",
            "dhcp_options_id": "dopt-06ae71b63e99ce75e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f041e8f458ff3733",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e9579ce4eb9ab20",
            "owner_id": "895097617590",
            "tags": {
              "Environment": "DockerProject-CPE",
              "Name": "DockerProject-CPE-vpc"
            },
            "tags_all": {
              "Environment": "DockerProject-CPE",
              "Name": "DockerProject-CPE-vpc"
            }
          }
        }
      ]
    }
  ]
}